--- a/registro.html
+++ b/registro.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
 	<head>
 	<title>Registro</title>
+	<link rel="stylesheet" href="estilos/reg.css">
 	<script>
 		function vervalores(){
 			var sAux="";
@@ -16,7 +18,7 @@
 	</script> 
 	</head>
 	
-	<body bgcolor="#00CCFF">
+	<body>
 	<form id='registro' name='registro' onSubmit='vervalores()'>
 	<table>
 	<tr>
