--- a/layout.html
+++ b/layout.html
@@ -23,7 +23,7 @@
 	<nav class='main' id='n1' role='navigation'>
 		<spam><a href='/'>Inicio</a></spam>
 		<spam><a href='/quizes'>Preguntas</a></spam>
-		<spam><a href='creditos.html'>Creditos</a></spam>
+		<spam><a href='./creditos.html'>Creditos</a></spam>
 	</nav>
     <section class="main" id="s1">
     
