--- a/registro.html
+++ b/registro.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	<title>Registro</title>
-	<link rel="stylesheet" href="estilos/reg.css">
+	<link rel="stylesheet" media='all' href="estilos/reg.css">
 	<script>
 		function vervalores(){
 			var sAux="";
