--- a/registro.html
+++ b/registro.html
@@ -3,7 +3,7 @@
 	<head>
 	<title>Registro</title>
 	<link rel="stylesheet" media='all' href="estilos/reg.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
 	<script>
 		function vervalores(){
 			var sAux="";
