--- a/registro.html
+++ b/registro.html
@@ -20,6 +20,7 @@
 	</head>
 	
 	<body>
+	<h2 align= 'center'>Registro</h2>
 	<div id="container">
 		<form id='registro' name='registro' onSubmit='vervalores()'>
 		<table>
