--- a/layout.html
+++ b/layout.html
@@ -17,6 +17,7 @@
   <div id='page-wrap'>
 	<header class='main' id='h1'>
       <span class="right"><a href="registro.html">Login</a></span>
+	  <span class="right"><a href="registro.html">Registro</a></span>
       <span class="right" style="display:none;"><a href="/logout">Logout</a></span>
 	<h2>Quiz: el juego de las preguntas</h2>
     </header>
