--- a/layout.html
+++ b/layout.html
@@ -16,8 +16,9 @@
   <body>
   <div id='page-wrap'>
 	<header class='main' id='h1'>
-      <span class="right"><a href="registro.html">Login</a></span>
+      <span class="right"><a href="">Login</a></span>
 	  <span class="right"><a href="registro.html">Registro</a></span>
+	  <span class="right"><a href="form5.html">Registro html 5</a></span>
       <span class="right" style="display:none;"><a href="/logout">Logout</a></span>
 	<h2>Quiz: el juego de las preguntas</h2>
     </header>
