--- a/form5.html
+++ b/form5.html
@@ -4,8 +4,8 @@
 <html>
 	<head>
 		<title>Formulario HTML5</title>
-		<link rel="stylesheet" type="text/css" href="./style.css" />
-		<script type="text/javascript" src="./jquery-1.11.3.min.js"></script><!-- Libreria JQuery 1.11.3 restricta -->
+		<link rel="stylesheet" type="text/css" href="src/style.css" />
+		<script type="text/javascript" src="src/jquery-1.11.3.min.js"></script><!-- Libreria JQuery 1.11.3 restricta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
 		<meta charset="UTF-8">
 		<meta name="description" content="Formulario HTML5">
@@ -13,10 +13,10 @@
 		<meta name="author" content="Borja Diez, Simone Brazzo">
 	</head>
 	<body>
-		<div id="cont_informatika_fakultatea"><img src="./informatika_fakultatea.jpg" alt="Informatika Fakultatea" title="Informatika Fakultatea"></img></div>
+		<div id="cont_informatika_fakultatea"><img src="src/images/informatika_fakultatea.jpg" alt="Informatika Fakultatea" title="Informatika Fakultatea"></img></div>
 		<div id="form-container">
 			<h1>Formulario HTML5/CSS3</h1>
-			<form action="Registrar.php" method="POST" id="form5">
+			<form action="src/php/Registrar.php" method="POST" id="form5">
 				<table class="tab" border="0">
 				  <tr>
 				    <td class="tab-td_1"><span class="field_name">Nombre y Apellidos:   (*)</span></td>
