--- a/registro.html
+++ b/registro.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	<title>Registro</title>
-	<link rel="stylesheet" media='all' href="estilos/reg.css">
+	<link rel="stylesheet" media='all' href="src/estilos/reg.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
 	<script>
 		function vervalores(){
@@ -16,7 +16,7 @@
 			alert(sAux); 
 		}
 	</script> 
-	<script type="text/javascript" src="./jquery-1.11.3.min.js"></script>
+	<script type="text/javascript" src="src/jquery-1.11.3.min.js"></script>
 	<script languaje="javascript">
 		
 		function verificar(){
@@ -154,9 +154,9 @@
 		</script>
 	</head>
 	<body>
-	<div id="cont_informatika_fakultatea" align="center"><img src="./informatika_fakultatea.jpg" alt="Informatika Fakultatea" title="Informatika Fakultatea"></img></div>
+	<div id="cont_informatika_fakultatea" align="center"><img src="src/images/informatika_fakultatea.jpg" alt="Informatika Fakultatea" title="Informatika Fakultatea"></img></div>
 	<div id="container">
-	<form id='registro' name='registro' onSubmit='return verificar()' action="Registrar.php" method="POST">
+	<form id='registro' name='registro' onSubmit='return verificar()' action="src/php/Registrar.php" method="POST">
 		<table id='tabla' align="center">
 		<h1 align="center">Formulario</h1>
 		<tr>
