--- a/layout.html
+++ b/layout.html
@@ -3,15 +3,15 @@
   <head>
     <meta name="tipo_contenido" content="text/html;" http-equiv="content-type" charset="utf-8">
 	<title>Preguntas</title>
-    <link rel='stylesheet' type='text/css' href='estilos/style.css' />
+    <link rel='stylesheet' type='text/css' href='/ProyectoSW/src/estilos/style.css' />
 	<link rel='stylesheet' 
 		   type='text/css' 
 		   media='only screen and (min-width: 530px) and (min-device-width: 481px)'
-		   href='estilos/wide.css' />
+		   href='/ProyectoSW/src/estilos/wide.css' />
 	<link rel='stylesheet' 
 		   type='text/css' 
 		   media='only screen and (max-width: 480px)'
-		   href='estilos/smartphone.css' />
+		   href='src/estilos/smartphone.css' />
   </head>
   <body>
   <div id='page-wrap'>
