--- a/layout.html
+++ b/layout.html
@@ -8,23 +8,24 @@
 		   type='text/css' 
 		   media='only screen and (min-width: 530px) and (min-device-width: 481px)'
 		   href='/ProyectoSW/src/estilos/wide.css' />
-	<link rel='stylesheet' 
+		   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<link rel='stylesheet' 
 		   type='text/css' 
-		   media='only screen and (max-width: 480px)'
-		   href='src/estilos/smartphone.css' />
+		   media='only screen and (max-width: 1080px)'
+		   href='smartphone.css' />
   </head>
   <body>
   <div id='page-wrap'>
 	<header class='main' id='h1'>
       <span class="right"><a href="">Login</a></span>
 	  <span class="right"><a href="registro.html">Registro</a></span>
-	  <span class="right"><a href="form5.html">Registro html 5</a></span>
+	  <span class="right"><a href="registroFoto.html">Registro con foto</a></span>
       <span class="right" style="display:none;"><a href="/logout">Logout</a></span>
 	<h2>Quiz: el juego de las preguntas</h2>
     </header>
 	<nav class='main' id='n1' role='navigation'>
 		<spam><a href='/'>Inicio</a></spam>
-		<spam><a href='/quizes'>Preguntas</a></spam>
+		<spam><a href='src/php/preguntas.php'>Preguntas</a></spam>
 		<spam><a href='./creditos.html'>Creditos</a></spam>
 	</nav>
     <section class="main" id="s1">
