--- a/registro.html
+++ b/registro.html
@@ -187,21 +187,20 @@
 		</tr>
 		<tr align="center">
 			<td align="right" width="180 px">Tecnologías y herramientas en las que esta interesado:</td>
-			<td align="center"><textarea name="interes""></textarea></td>
+			<td align="center"><textarea name="interes"></textarea></td>
 		</tr>
-		<tr>
+		<!--<tr>
 			<td align="right" width="100 px">Sube tu foto:</td>
 			<td><input type="file" name="foto" id='imageField'></input></td>
-		</tr>
+		</tr>-->
 		<tr>
 		<td align="center"><input id="btnSubida" type="submit" value="Enviar Datos" align="center"></input></td>
 		</tr>
 		</table>
 	</form>	
-	<div align="center">
+	<!--<div align="center">
 	<img id="imagen_upload" src=""></td>
+	</div>-->
 	</div>
-	</div>
-
 	</body>
 </html>
